--- a/templates/identify.html
+++ b/templates/identify.html
@@ -1,54 +1,62 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<meta charset="utf-8" />
-		<!--修复ios qq浏览器 数字显示-->
-		<meta name="format-detection" content="telephone=no">
-		<meta http-equiv="x-rim-auto-match" content="none">
-		<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_lgsst0sg15e.css" />
-		<link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
-		<title></title>
-	</head>
+<head>
+    <meta charset="utf-8"/>
+    <!--修复ios qq浏览器 数字显示-->
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="x-rim-auto-match" content="none">
+    <meta name="viewport"
+          content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_lgsst0sg15e.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
+    <title></title>
+</head>
 
-	<body>
-		<div class="warp bg-f4e5bc">
-			<div class="doc-list">
-				<ul>
-					<li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
-						<p class="c66 mzub-f1 fz22 mr30">医院名称</p>
-						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">禾乾医疗</p>
-					</li>
-					<li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
-						<p class="c66 mzub-f1 fz22 mr30">挂号病区</p>
-						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ schedule.section.area }}</p>
-					</li>
-					<li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
-						<p class="c66 mzub-f1 fz22 mr30">挂号科室</p>
-						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ schedule.section.name }}</p>
-					</li>
-					<li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
-						<p class="c66 mzub-f1 fz22 mr30">就诊医生</p>
-						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ schedule.doctor.name }}</p>
-					</li>
-                    <li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
-						<p class="c66 mzub-f1 fz22 mr30">挂号人</p>
-						<p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ user.nickname }}</p>
-					</li>
+<body>
+<div class="warp bg-f4e5bc">
+    <div class="doc-list">
+        <ul>
+            <li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
+                <p class="c66 mzub-f1 fz22 mr30">医院名称</p>
+                <p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">禾乾医疗</p>
+            </li>
+            <li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
+                <p class="c66 mzub-f1 fz22 mr30">挂号病区</p>
+                <p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ schedule.section.area }}</p>
+            </li>
+            <li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
+                <p class="c66 mzub-f1 fz22 mr30">挂号科室</p>
+                <p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ schedule.section.name }}</p>
+            </li>
+            <li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
+                <p class="c66 mzub-f1 fz22 mr30">就诊医生</p>
+                <p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ schedule.doctor.name }}</p>
+            </li>
+            <li class="mzub mzub-ac bb plr30 ptb20 bg-fff6cf">
+                <p class="c66 mzub-f1 fz22 mr30">挂号人</p>
+                <p class="fz24 c-834c45 mzub-te mzub-f1 tx-r">{{ user.nickname }}</p>
+            </li>
 
-				</ul>
-			</div>
-			<div class="mzub mzub-ac plr30 ptb20 bg-fff6cf mt20">
-				<p class="c66 mzub-f1 fz22 mr30">挂号金额</p>
-				<p class="fz24 c-da9548 mzub-te mzub-f1 tx-r">{{ schedule.doctor.price }}元</p>
-			</div>
-			<div class="sureBtn mzub mzub-pac ptb20 bg-f4e5bc cff mt20">付款挂号
-			</div>
-			
-			
-{#			<p class="tx-c c66 fz24">暂无数据~~~</p>#}
-		</div>
-	</body>
+        </ul>
+    </div>
+    <div class="mzub mzub-ac plr30 ptb20 bg-fff6cf mt20">
+        <p class="c66 mzub-f1 fz22 mr30">挂号金额</p>
+        <p class="fz24 c-da9548 mzub-te mzub-f1 tx-r">{{ schedule.doctor.price }}元</p>
+    </div>
+    <div class="sureBtn mzub mzub-pac ptb20 bg-f4e5bc cff mt20">付款挂号
+    </div>
+
+
+    {#			<p class="tx-c c66 fz24">暂无数据~~~</p>#}
+</div>
+</body>
+
+<script type="text/javascript">
+    $('.sureBtn').click(function () {
+        window.location.href = "{{ auth_url(reverse('register_success')), kwargs={'user_id': user.id} }}";
+    })
+
+</script>
 
 </html>
