数据库调整到服务器

--- a/templates/identify.html
+++ b/templates/identify.html
@@ -54,7 +54,8 @@
 
 <script type="text/javascript">
     $('.sureBtn').click(function () {
-        window.location.href = "{{ auth_url(reverse('register_success', kwargs={'user_id': user.id})) }}";
+        alert("ok")
+        window.location.href = "{{ reverse('register_success', kwargs={'user_id': user.id}) }}";
     })
 
 </script>
