--- a/templates/identify.html
+++ b/templates/identify.html
@@ -56,7 +56,7 @@
 <script type="text/javascript">
     $('.sureBtn').click(function () {
         alert("ok")
-        window.location.href = "{{ reverse('register_success', kwargs={'user_id': user.id}) }}";
+        window.location.href = "{{ reverse('register_success', kwargs={'user_id': user.id, 'schedule_id':schedule.id}) }}";
     })
 
 </script>
