数据库调整到服务器

--- a/templates/hospital_list.html
+++ b/templates/hospital_list.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_lgsst0sg15e.css"/>
     {#		<link rel="stylesheet" type="text/css" href="css/main.css"/>#}
     <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
-    <title></title>
+    <title>选择门店</title>
 </head>
 <body>
 <div class="warp plr30 pt30 bg-fff6cf">
