--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -70,24 +70,26 @@
         </div>
         <div class="doc-list">
             <ul>
+                {% for schedule in schedules %}
                 <a href="{{ auth_url(reverse('register_identify', kwargs={'schedule_id': schedule.id})) }}">
                     {#                <li onclick="goInfo()" class="mzub mzub-ac ptb10 bb plr30">#}
                     <li  class="mzub mzub-ac ptb10 bb plr30">
                         <div class="appointment mzub mzub-pac fz12 c-606266 mr20">可预约</div>
                         <div class="mzub-f1">
-                            <p class="fz22 c-606266">上午</p>
+                            <p class="fz22 c-606266">{{ schedule.get_type_display }}</p>
                         </div>
                         <div class="residue-num mzub mzub-pac cff fz18 mr10">{{ schedule.doctor.price }}元</div>
                         <i class="iconfont icon-next fz24 c33"></i>
                     </li>
                 </a>
+                {% endfor %}
             </ul>
         </div>
     </div>
     <div class="doc-scheduling-container">
         <p class="tx-c c66 fz24">介绍</p>
     </div>
-    <p class="tx-c c66 fz24">暂无数据~~~</p>
+{#    <p class="tx-c c66 fz24">暂无数据~~~</p>#}
 </div>
 </body>
 {#<script type="text/javascript">#}
