--- a/templates/identify.html
+++ b/templates/identify.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_lgsst0sg15e.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
     <script src="/static/js/jquery-3.3.1.min.js"></script>
-    <title></title>
+    <title>挂号确认</title>
 </head>
 
 <body>
