数据库调整到服务器

--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -76,7 +76,7 @@
                     <li  class="mzub mzub-ac ptb10 bb plr30">
                         <div class="appointment mzub mzub-pac fz12 c-606266 mr20">可预约</div>
                         <div class="mzub-f1">
-                            <p class="fz22 c-606266">{{ schedule.get_type_display }}</p>
+                            <p class="fz22 c-606266">{{ schedule.get_type_display() }}</p>
                         </div>
                         <div class="residue-num mzub mzub-pac cff fz18 mr10">{{ schedule.doctor.price }}元</div>
                         <i class="iconfont icon-next fz24 c33"></i>
