--- a/templates/hosptial_intr.html
+++ b/templates/hosptial_intr.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<meta charset="utf-8" />
-		<!--修复ios qq浏览器 数字显示-->
-		<meta name="format-detection" content="telephone=no">
-		<meta http-equiv="x-rim-auto-match" content="none">
-		<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_rp4drjzw9.css" />
-		<link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
-		<title>医馆简介</title>
-	</head>
+<head>
+    <meta charset="utf-8"/>
+    <!--修复ios qq浏览器 数字显示-->
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="x-rim-auto-match" content="none">
+    <meta name="viewport"
+          content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_rp4drjzw9.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
+    <title>医馆简介</title>
+</head>
 
-	<body>
-		<div class="warp pt30 bg-f4e5bc plr30">
-			<h1 class="mb20 fz34">医馆简介</h1>
-			<p class="fz24">禾乾医疗承袭中医大家施今墨 “不可执一药以论方，不可执一方以论病，不可循一家之好而有失，不可肆一派之专以致误” 的理念，辩证论治，帮助每一位中国人了解中医这一祖先留传下来的伟大精神瑰宝，并运用于现代生活，对症下药，治愈顽疾，调养身心。</p>
-		</div>
-	</body>
+<body>
+{% for hosp in  hosptial_intr %}
+<div class="warp pt30 bg-f4e5bc plr30">
+    <h1 class="mb20 fz34">医馆简介</h1>
+    <p class="fz24">{{ hosp.intr}}</p>
+</div>
+<div class="warp pt30 bg-f4e5bc plr30">
+    <h1 class="mb20 fz34">医师资源</h1>
+    <p class="fz24">{{ hosp.doctor_intr }}</p>
+</div>
+<div class="warp pt30 bg-f4e5bc plr30">
+    <h1 class="mb20 fz34">主营科室及项目</h1>
+    <p class="fz24">{{ hosp.section_intr }}</p>
+</div>
+<div class="warp pt30 bg-f4e5bc plr30">
+    <h1 class="mb20 fz34">药材质量保障</h1>
+    <p class="fz24">{{ hosp.medicinal_intr }}</p>
+</div>
+<div class="warp pt30 bg-f4e5bc plr30">
+    <h1 class="mb20 fz34">服务理念</h1>
+    <p class="fz24">{{ hosp.server_intr }}</p>
+</div>
+<div class="warp pt30 bg-f4e5bc plr30">
+    <h1 class="mb20 fz34">预约热线</h1>
+    <p class="fz24">{{ hosp.contract_intr }}</p>
+</div>
+{% endfor %}
+</body>
 
 </html>
