数据库调整到服务器

--- a/templates/hosptial_know.html
+++ b/templates/hosptial_know.html
@@ -10,7 +10,7 @@
           content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_rp4drjzw9.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
-    <title>医馆简介</title>
+    <title>医馆文化</title>
 </head>
 
 <body>
