数据库调整到服务器

--- a/templates/hosptial_know.html
+++ b/templates/hosptial_know.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-{% for hosp in  hosptial_intr %}
+{% for hosp_cul in  hosptial_cul %}
 <div class="warp pt30 bg-f4e5bc plr30">
-    <h1 class="mb20 fz34">医馆文化</h1>
-    <p class="fz24">{{ hosp.culture}}</p>
+    <h1 class="mb20 fz34">{{ hosp_cul.title }}</h1>
+    <p class="fz24">{{ hosp_cul.content}}</p>
 </div>
 
 {% endfor %}
