--- a/templates/identify.html
+++ b/templates/identify.html
@@ -55,8 +55,49 @@
 
 <script type="text/javascript">
     $('.sureBtn').click(function () {
+        function unifiedorder() {
 
-        window.location.href = "{{ reverse('register_success', kwargs={'user_id': user.id, 'schedule_id':schedule.id}) }}";
+            $.ajax({
+                url:"/wx/recharge/unifiedorder/",
+                type: "POST",
+                data: {'pay_type': '0', 'pay_amount': '0.01'},
+                success:function(result){
+                    function onBridgeReady(){
+                       WeixinJSBridge.invoke(
+                           'getBrandWCPayRequest', {
+                               "appId":result.appId,     //公众号名称，由商户传入
+                               "timeStamp":result.timeStamp,         //时间戳，自1970年以来的秒数
+                               "nonceStr":result.nonceStr, //随机串
+                               "package":result.package,
+                               "signType":result.signType,         //微信签名方式：
+                               "paySign":result.paySign //微信签名
+                           },
+                           function(res){
+                               // 使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回    ok，但并不保证它绝对可靠。
+                               WeixinJSBridge.log(res.err_msg);
+                               if(res.err_msg == "get_brand_wcpay_request:ok" ) {
+                                   alert("充值成功");
+                               }else{
+                                   alert("充值失败");
+                               }
+                           }
+                       );
+                    }
+
+                    if (typeof WeixinJSBridge == "undefined") {
+                        if (document.addEventListener) {
+                            document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
+                        } else if (document.attachEvent) {
+                            document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
+                            document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
+                        }
+                    } else {
+                        onBridgeReady();
+                    }
+                }
+            });
+        }
+        //window.location.href = "{{ reverse('register_success', kwargs={'user_id': user.id, 'schedule_id':schedule.id}) }}";
     })
 
 </script>
