数据库调整到服务器

--- a/templates/identify.html
+++ b/templates/identify.html
@@ -77,9 +77,9 @@
                                 // 使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回    ok，但并不保证它绝对可靠。
                                 WeixinJSBridge.log(res.err_msg);
                                 if (res.err_msg == "get_brand_wcpay_request:ok") {
-                                    alert("充值成功");
+                                    window.location.href = "{{ reverse('register_success', kwargs={'user_id': user.id, 'schedule_id':schedule.id}) }}";
                                 } else {
-                                    alert("充值失败");
+                                    alert("充值已取消");
                                 }
                             }
                     );
