数据库调整到服务器

--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -13,7 +13,7 @@
 
     {#    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>#}
     <script src="/static/js/jquery-3.3.1.min.js"></script>
-    <title></title>
+    <title>医生排班</title>
 </head>
 <body>
 <div class="warp bg-fff6cf">
