--- a/templates/hosptial_intr.html
+++ b/templates/hosptial_intr.html
@@ -15,7 +15,7 @@
 
 <body>
 {% for hosp in  hosptial_intr %}
-    <div class="warp pt30 bg-f4e5bc plr30">
+    <div class="warp-bg pt30 bg-f4e5bc plr30">
         <h1 class="mb20 fz34">医馆简介</h1>
         <p class="fz24">{{ hosp.intr }}</p>
         <br>
