数据库调整到服务器

--- a/templates/hosptial_intr.html
+++ b/templates/hosptial_intr.html
@@ -24,7 +24,7 @@
 				<div class="swiper-container mb20">
 					<div class="swiper-wrapper">
                        {% for banner in hosp_banners %}
-						<div class="swiper-slide swiper-slide-img"><img src="{{ banner.image }}" alt=""/></div>
+						<div class="swiper-slide swiper-slide-img"><img src="/media/{{ banner.image }}" alt=""/></div>
                        {% endfor %}
 					</div>
 				</div>
