--- a/templates/hosptial_intr.html
+++ b/templates/hosptial_intr.html
@@ -36,8 +36,12 @@
                     {% endfor %}
 				</div>
 				<div class="bb ptb20">
-					<p class="fz30 c-5a6174 fw-b">电话</p>
+					<p class="fz30 c-5a6174 fw-b">前台电话</p>
 					<p class="fz28 c-e9894f">{{ hosptial_intr.contract_intr }}</p>
+				</div>
+                <div class="bb ptb20">
+					<p class="fz30 c-5a6174 fw-b">值班电话</p>
+					<p class="fz28 c-e9894f">{{ hosptial_intr.work_phone }}</p>
 				</div>
 				<div class="bb ptb20">
 					<p class="fz30 c-5a6174 fw-b">营业时间</p>
