数据库调整到服务器

--- a/templates/hosptial_intr.html
+++ b/templates/hosptial_intr.html
@@ -15,7 +15,7 @@
             <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
 
 		    <script type="text/javascript" src="/static/js/swiper.min.js"></script>
-			<title></title>
+			<title>医馆介绍</title>
 		</head>
 	</head>
 
