数据库调整到服务器

--- a/templates/doctor_info.html
+++ b/templates/doctor_info.html
@@ -41,6 +41,7 @@
 				<p class="fz30 c-5a6174 fw-b mb10">简介</p>
 				<p class="fz28 c66">{{ doctor.name }}</p>
 				<p class="fz28 c66">{{ doctor.professor }}</p>
+                <p class="fz28 c66">{{ doctor.honor }}</p>
 				<p class="fz28 c66 open-info">{{ doctor.content }}</p>
 				<p class="fz24 c66 tx-c ptb20 open-info-btn">展开详情 <i class="iconfont icon-down fz24"></i> </p>
 			</div>
