--- a/templates/section_detail.html
+++ b/templates/section_detail.html
@@ -22,7 +22,7 @@
         <p class="data-set fz24 c33 mzub-f1">{{ str_date }}</p>
         <div class="mzub mzub-pac fz20 scheduling-box">
             <p class="scheduling-tab active mzub-f1 plr10 tx-c plr10 ptb10">日期排班</p>
-            <p class="scheduling-tab mzub-f1 all-doc plr10 tx-c plr10 ptb10">全部医生</p>
+{#            <p class="scheduling-tab mzub-f1 all-doc plr10 tx-c plr10 ptb10">全部医生</p>#}
         </div>
     </div>
     <div class="scheduling-container">
