数据库调整到服务器

--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="mzub-f1 mzub-te3">
                         <p class="mzub-te fz24 c-5a6174 mr20 mb10 fw-b">{{ project.title }}</p>
-                        <p class="fz22 c99 mzub-te2">{{ project.content }}</p>
+                        <p class="fz22 c99 mzub-te2">{{ project.abstract }}</p>
                     </div>
                 </a>
             </li>
