--- a/templates/knowledge_list.html
+++ b/templates/knowledge_list.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="mzub-f1 mzub-te3">
                         <p class="mzub-te fz24 c-5a6174 mr20 mb10 fw-b">{{ know.title }}</p>
-                        <p class="fz22 c99 mzub-te2">{{ know.content }}</p>
+                        <p class="fz22 c99 mzub-te2">{{ know.abstract }}</p>
                     </div>
                 </a>
             </li>
