数据库调整到服务器

--- a/templates/user_center.html
+++ b/templates/user_center.html
@@ -23,7 +23,7 @@
 			</div>
 				<ul class="new-center-info pl30 pt40">
 					<li class="ptb30 new-bb pr30">
-						<a href="" class="mzub mzub-ac">
+						<a href="{{ reverse('my_reg_list') }}" class="mzub mzub-ac">
 							<p class="mzub-f1 fz24 c-5a6174 mr10">我的预约</p>
 							<i class="fz24 c-c8 iconfont icon-next"></i>
 						</a>
