数据库调整到服务器

--- a/templates/my_reg.html
+++ b/templates/my_reg.html
@@ -28,7 +28,7 @@
                     <li class="ptb20 bgff plr30">
                         <div class="mzub muzb-ac mb20">
                             <p class="fz24 c-5a6174 mzub-f1 fw-b">预约医生：{{ reg_info.schedule.doctor.name }}</p>
-                            <span class="fz24 c-9a9a9a">{{ reg_info.status }}</span>
+                            <span class="fz24 c-9a9a9a">{{ reg_info.get_status_display() }}</span>
                         </div>
                         <div class="mzub mzub-ac">
                             <div class="mzub-f1 mzub-te4 mr10">
