数据库调整到服务器

--- a/templates/register_history_list.html
+++ b/templates/register_history_list.html
@@ -21,7 +21,7 @@
 						<div class="mzub-f1">
 							<p class="fz30 c-504d3e">{{ reg_info.schedule.section.name }}</p>
 							<p class="fz24 c-9f957c">{{ reg_info.schedule.doctor.name }}</p>
-							<p class="fz24 c-9f957c">就诊时间{{ truncate(reg_info.schedule.date ,length=10,killwords=False) }}</p>
+							<p class="fz24 c-9f957c">就诊时间{{ reg_info.schedule.date }}</p>
 						</div>
 						<div class="mzub mzub-ac">
 							<!--<div class="mzub mzub-pac"><i class="iconfont icon-shenqingchenggonggougouicon fz30 c-8b5146 mr10"></i></div>-->
