数据库调整到服务器

--- a/templates/user_center.html
+++ b/templates/user_center.html
@@ -30,7 +30,7 @@
 					</li>
 
 					<li class="ptb30 new-bb pr30">
-						<a href="" class="mzub mzub-ac">
+						<a href="{{ reverse('pay_record', kwargs={'user_id': user.id}) }}" class="mzub mzub-ac">
 							<p class="mzub-f1 fz24 c-5a6174 mr10">我的账单</p>
 							<i class="fz24 c-c8 iconfont icon-next"></i>
 						</a>
