--- a/templates/query_code.html
+++ b/templates/query_code.html
@@ -12,23 +12,23 @@
 <p class="fz20 c-504d3e">排班信息</p>
 <br>
 
-<ul class="department-list">
-    {% for sch in schdules %}
-        <li class="bb ptb10 mzub mzub-ac">
-            <p class="fz30 c-504d3e">医生{{ sch.doctor.name }}-班次{{ sch.get_type_display() }}</p>
-            <div class="sureBtn query">查询序号
-            </div>
-            <div class="sureBtn identify">确认出号
-            </div>
-            <p class="scheduleid" hidden="hidden">{{ sch.id }}</p>
-        </li>
-    {% endfor %}
-</ul>
+{#<ul class="department-list">#}
+{#    {% for sch in schdules %}#}
+{#        <li class="bb ptb10 mzub mzub-ac">#}
+{#            <p class="fz30 c-504d3e">医生{{ sch.doctor.name }}-班次{{ sch.get_type_display() }}</p>#}
+{#            <div class="sureBtn query">查询序号#}
+{#            </div>#}
+{#            <div class="sureBtn identify">确认出号#}
+{#            </div>#}
+{#            <p class="scheduleid" hidden="hidden">{{ sch.id }}</p>#}
+{#        </li>#}
+{#    {% endfor %}#}
+{#</ul>#}
 
 <div class="list-search plr20 mzub mzub-ac mb30 bg-e4d2ac">
     <i class="iconfont icon-sousuo fz24 c33 mr10"></i>
     <input class="c-606266 fz14" type="text" name="" id="query_input" value="" placeholder="输入挂号确认码查询"/>
-    <input class="query_code c-606266 fz14" type="submit" value="查询确认码">
+    <input class="query_code c-606266 fz14" type="submit" value="查询出号">
 </div>
 
 </body>
@@ -100,6 +100,7 @@
                     else
                         reg_time = '上午'
                     alert('查询到：' + '就诊人：' + ret.name + '-' + '就诊医生' + ret.doctor + '-' + '就诊时间' + reg_time + '-' + '就诊序号' + ret.num);
+                    alert('请使用挂号系统出号')
 
 
                 },
