--- a/templates/pay_record.html
+++ b/templates/pay_record.html
@@ -19,16 +19,16 @@
 				<li class="bb ptb20 bg-fff6cf mb20 plr30">
 
 						<div class="mzub-f1">
-							<p class="fz30 c-504d3e">消费类型{{ record.get_recharge_type_display() }}</p>
-							<p class="fz24 c-9f957c">消费金额{{ record.money }}</p>
-							<p class="fz24 c-9f957c">消费时间{{ record.add_time }}</p>
+							<p class="fz30 c-504d3e">消费类：{{ record.get_recharge_type_display() }}</p>
+							<p class="fz24 c-9f957c">消费金额：{{ record.money }}</p>
+							<p class="fz24 c-9f957c">消费时间：{{ record.add_time }}</p>
 						</div>
 						<div class="mzub mzub-ac">
 							<!--<div class="mzub mzub-pac"><i class="iconfont icon-shenqingchenggonggougouicon fz30 c-8b5146 mr10"></i></div>-->
 
 							<p class="mr10 fz24 c-504d3e"></p>
 						</div>
-						<div class="mzub mzub-pac"><i class="iconfont icon-next fz24 c-504d3e"></i></div>
+{#						<div class="mzub mzub-pac"><i class="iconfont icon-next fz24 c-504d3e"></i></div>#}
 
 
 				</li>
