--- a/templates/pay_record.html
+++ b/templates/pay_record.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<meta charset="utf-8" />
-		<!--修复ios qq浏览器 数字显示-->
-		<meta name="format-detection" content="telephone=no">
-		<meta http-equiv="x-rim-auto-match" content="none">
-		<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_rp4drjzw9.css" />
-		<link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
-		<title>我的账单</title>
-	</head>
+<head>
+    <meta charset="utf-8"/>
+    <!--修复ios qq浏览器 数字显示-->
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="x-rim-auto-match" content="none">
+    <meta name="viewport"
+          content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_856748_rp4drjzw9.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
+    <title>我的账单</title>
+</head>
 
-	<body>
-		<div class="warp pt30 bg-f4e5bc">
-			<ul class="department-list">
-                {% for record in records %}
-				<li class="bb ptb20 bg-fff6cf mb20 plr30">
+<body>
+<div class="warp pt30 bg-f4e5bc">
+    <ul class="department-list">
+        {% for record in records %}
+            <li class="bb ptb20 bg-fff6cf mb20 plr30">
 
-						<div class="mzub-f1">
-							<p class="fz30 c-504d3e">消费类：{{ record.get_recharge_type_display() }}</p>
-							<p class="fz24 c-9f957c">消费金额：{{ record.money }}</p>
-							<p class="fz24 c-9f957c">消费时间：{{ record.add_time }}</p>
-						</div>
-						<div class="mzub mzub-ac">
-							<!--<div class="mzub mzub-pac"><i class="iconfont icon-shenqingchenggonggougouicon fz30 c-8b5146 mr10"></i></div>-->
+                <div class="mzub-f1">
+                    <p class="fz30 c-504d3e">类型：{{ record.get_recharge_type_display() }}</p>
+                    <p class="fz24 c-9f957c">金额：{{ record.money }}</p>
+                    <p class="fz24 c-9f957c">时间：{{ record.add_time }}</p>
+                    {% if record.status %}
+                        <p class="fz24 c-9f957c">状态：已支付</p>
+                    {% else %}
+                        <p class="fz24 c-9f957c">状态：未支付</p>
+                    {% endif %}
+                </div>
+                <div class="mzub mzub-ac">
+                    <!--<div class="mzub mzub-pac"><i class="iconfont icon-shenqingchenggonggougouicon fz30 c-8b5146 mr10"></i></div>-->
 
-							<p class="mr10 fz24 c-504d3e"></p>
-						</div>
-{#						<div class="mzub mzub-pac"><i class="iconfont icon-next fz24 c-504d3e"></i></div>#}
+                    <p class="mr10 fz24 c-504d3e"></p>
+                </div>
+                {#						<div class="mzub mzub-pac"><i class="iconfont icon-next fz24 c-504d3e"></i></div>#}
 
 
-				</li>
-                {% endfor %}
-			</ul>
+            </li>
+        {% endfor %}
+    </ul>
 
-		</div>
-	</body>
+</div>
+</body>
 
 </html>
