数据库调整到服务器

--- a/templates/pay_record.html
+++ b/templates/pay_record.html
@@ -23,11 +23,11 @@
                     <p class="fz30 c-504d3e">类型：{{ record.get_recharge_type_display() }}</p>
                     <p class="fz24 c-9f957c">金额：{{ record.money }}</p>
                     <p class="fz24 c-9f957c">时间：{{ record.add_time }}</p>
-                    {% if record.status %}
-                        <p class="fz24 c-9f957c">状态：已支付</p>
-                    {% else %}
-                        <p class="fz24 c-9f957c">状态：未支付</p>
-                    {% endif %}
+{#                    {% if record.status %}#}
+{#                        <p class="fz24 c-9f957c">状态：已支付</p>#}
+{#                    {% else %}#}
+{#                        <p class="fz24 c-9f957c">状态：未支付</p>#}
+{#                    {% endif %}#}
                 </div>
                 <div class="mzub mzub-ac">
                     <!--<div class="mzub mzub-pac"><i class="iconfont icon-shenqingchenggonggougouicon fz30 c-8b5146 mr10"></i></div>-->
