数据库调整到服务器

--- a/templates/query_code.html
+++ b/templates/query_code.html
@@ -99,7 +99,7 @@
                         reg_time = '下午'
                     else
                         reg_time = '上午'
-                    alert('查询到：' + '就诊人：' + ret.name + '-' + '就诊医生' + ret.doctor + '-' + '就诊时间' + reg_time + '-' + '就诊序号' + ret.num);
+                    alert('查询到：' + '就诊人：' + ret.name + '-' + '就诊医生' + ret.doctor + '-' + '就诊时间' + ret.date + '-' + '就诊序号' + ret.num);
                     alert('请使用挂号系统出号')
 
 
