数据库调整到服务器

--- a/templates/knowledge_info.html
+++ b/templates/knowledge_info.html
@@ -22,7 +22,8 @@
 					<p class="new-doc-pro-name mzub-te">{{ know.title }}</p>
 				</div>
 				<div class="plr30 pt100">
-				<p class="fz22 c99">{{ know.content }}</p>
+                    <textarea class="fz22 c99">{{ know.content }}</textarea>
+{#				<p class="fz22 c99">{{ know.content }}</p>#}
 				</div>
 		</div>
 	</body>
