--- a/templates/knowledge_info.html
+++ b/templates/knowledge_info.html
@@ -23,10 +23,10 @@
         <p class="new-doc-pro-name mzub-te">{{ know.title }}</p>
     </div>
     <div class="plr30 pt100">
-{#        <textarea class="fz24 c99"#}
-{#                  style="BORDER-BOTTOM: 0px solid; BORDER-LEFT: 0px solid; BORDER-RIGHT: 0px solid; BORDER-TOP: 0px solid;width:300px;height:600px;"#}
-{#                  disabled="disabled">{{ know.content }}</textarea>#}
-        				<div class="fz24 c99">{{ know.content }}</div>
+        <textarea class="fz24 c99"
+                  style="BORDER-BOTTOM: 0px solid; BORDER-LEFT: 0px solid; BORDER-RIGHT: 0px solid; BORDER-TOP: 0px solid;width:360px;height:700px;"
+                  disabled="disabled">{{ know.content }}</textarea>
+{#        				<div class="fz24 c99">{{ know.content }}</div>#}
     </div>
 </div>
 </body>
