--- a/templates/hosptial_intr.html
+++ b/templates/hosptial_intr.html
@@ -48,7 +48,7 @@
             <p class="fz30 c-5a6174 fw-b">营业时间</p>
             <p class="fz28 c66">{{ hosptial_intr.work_time }}</p>
         </div>
-        <div class="ptb20">
+        <div class="bb ptb20">
             <p class="fz30 c-5a6174 fw-b">诊所介绍</p>
             <p class="fz28 c66">{{ hosptial_intr.intr }}</p>
         </div>
