--- a/templates/query_code.html
+++ b/templates/query_code.html
@@ -99,7 +99,7 @@
                         reg_time = '下午'
                     else
                         reg_time = '上午'
-                    alert('查询到：' + '就诊人：' + ret.name + '-' + '就诊医生' + ret.doctor + '-' + '就诊时间' + ret.date + '-' + '就诊序号' + ret.num);
+                    alert('查询到：' + '就诊人：' + ret.name + '-' + '就诊医生' + ret.doctor + '-' + '就诊时间' + ret.date + '-' + '就诊序号' + ret.num  + '-' + '挂号时间' + ret.reg_time);
                     if(ret.reg_status==3)
                         alert("该号已出，请勿重复出号")
                     else{
